[gd_scene load_steps=4 format=3 uid="uid://ht3y04jyahq6"]

[ext_resource type="Script" uid="uid://cynpc78ji1sgi" path="res://character_body_3d.gd" id="1_lhv14"]
[ext_resource type="PackedScene" uid="uid://c2f3q4u7wxj7h" path="res://character_model.tscn" id="2_6aur8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a0tk4"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_lhv14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.108309, 0)
shape = SubResource("BoxShape3D_a0tk4")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.678523, 0)

[node name="CameraFPS" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.46306, -0.201727)

[node name="CameraPivotTPS" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="SpringArmTPS" type="SpringArm3D" parent="Head/CameraPivotTPS"]
unique_name_in_owner = true
spring_length = 5.0

[node name="CameraTPS" type="Camera3D" parent="Head/CameraPivotTPS/SpringArmTPS"]
unique_name_in_owner = true

[node name="Gundam" parent="." instance=ExtResource("2_6aur8")]
unique_name_in_owner = true
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
